--- a/MiddlewareNET6Demo/appsettings.json
+++ b/MiddlewareNET6Demo/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MiddlewareSettings": {
+    "UseTimeLoggingMiddleware": "true",
+    "UseCultureMiddleware": "true",
+    "UseIntentionalDelayMiddleware": "true"
+  }
 }
